web/styles/settings.css
/* ... */
#manage-profile-tab {
    #edit-user-form,
    #bot-edit-form {
        .name-setting {
            margin-bottom: 10px;
        }
    }

    #edit-user-form-error:has(.banner),
    #bot-edit-form-error:has(.banner) {
        margin-bottom: 10px;
    }

    & input,
    input[type="url"],
    .modal-textarea,
    & select {
        /* Override undesired Bootstrap default. */
        margin-bottom: 0;
    }
}

#muted_topics_table {
    width: 90%;
    margin: 0 auto;

    & tbody {
        border-bottom: none;
    }
}

#payload_url_inputbox {
    & input[type="text"] {
        width: 340px;
    }
}

.settings-field-label {
    margin-bottom: var(--margin-bottom-field-description);
    /* Avoid having the clickable area extend to the full width of the containing element */
    width: fit-content;
}

#realm-user-default-settings {
    .settings-field-label,
    .settings-checkbox-wrapper,
    .info-density-controls {
        .reset-user-setting-to-default {
            display: inline-flex;
            padding: 0.1875em; /* 3px at 16px */
            margin-left: 0.1875em; /* 3px at 16px */

            position: relative;
            top: -0.0625em; /* 1px at 16px */

            .zulip-icon {
                width: 1em; /* 15px at 16px */
                height: 1em; /* 15px at 16px */
                font-size: 0.9375em; /* 15px at 16px */
            }
        }
    }

    .general_notifications .reset-user-setting-to-default {
        font-size: 1.2em;
        margin-top: 0.3125em; /* 6px at 16px */
        /* This is needed to adjust the gap property used
        for flex layout so that button is not too far from
        the heading. */
        margin-left: -0.5em; /* 9.6px at 16px */
    }
}

.settings-profile-user-field-hint {
    color: var(--color-text-settings-field-hint);
    /* We effectively eliminate the margin-bottom on
       .settings-field-label by pulling .field-hint
       up a corresponding negative value. This cinches
       things up a little tighter, given the generous
       line-height (20px) on <label> elements, though
       note well that that comes care of Bootstrap. */
    margin-top: calc(var(--margin-bottom-field-description) * -1.5);
    /* Maintain the same margin-bottom value as appears
       with .settings-field-label to display text-input
       combinations uniformly throughout the settings UI. */
    margin-bottom: var(--margin-bottom-field-description);
}

.cursor-text {
    cursor: text;
}

.profile-field-choices {
    display: inline-block;

    & hr {
        margin-top: 0;
        margin-bottom: 5px;
    }

    .choice-row {
        margin-top: 8px;

        & input {
            width: 190px;
        }

        & button {
            margin-left: 2px;
        }
    }

    > .choice-row:first-of-type {
        margin-top: 0;
    }
}

.profile-field-choices-wrapper > .alphabetize-choices-button {
    display: block;
    margin: 12px 0 0;
}

.custom_user_field,
.bot_owner_user_field {
    .pill-container {
        min-height: 24px;
        max-width: 206px;

        &:focus-within {
            border-color: hsl(206deg 80% 62% / 80%);
            outline: 0;
            outline: 1px dotted \9;

            box-shadow:
                inset 0 1px 1px hsl(0deg 0% 0% / 7.5%),
                0 0 8px hsl(206deg 80% 62% / 60%);
        }
    }
}

#get_api_key_button {
    display: block;
}

#attachment-stats-holder {
    position: relative;
    margin-top: 13px;
    display: block;

    .tip::before {
        content: "\f135";
        margin-right: 8px;
    }
}

.admin_exports_table {
    margin-bottom: 20px;
}

.settings-textarea,
.modal-textarea {
    color: var(--color-text-default);
    background-color: var(--background-color-textarea);
    border-radius: 4px;
    vertical-align: middle;
    border: var(--input-border-width) solid var(--border-color-textarea);
    padding: var(--input-vertical-padding) var(--input-horizontal-padding);

    box-shadow: inset 0 1px 1px hsl(0deg 0% 0% / 7.5%);
    transition:
        border-color linear 0.2s,
        box-shadow linear 0.2s;

    font-size: 1em;
    line-height: var(--base-line-height-unitless);
    font-family: inherit;

    &:focus {
        border-color: var(--focus-border-color-textarea);
        outline: 0;

        box-shadow:
            inset 0 1px 1px hsl(0deg 0% 0% / 7.5%),
            0 0 8px hsl(206.5deg 80% 62% / 60%);
    }

    &:disabled {
        cursor: not-allowed;
    }
}

.settings-textarea:disabled {
    background-color: var(--background-color-disabled-textarea);
    opacity: 0.5;
}

/* This nicely displays uneditable user-generated content, such as
   rendered realm and channel descriptions. */
.settings-view-only-textarea {
    margin: 0;
    /* 5px at 16px */
    padding: 0.3125em var(--view-only-field-horizontal-padding);
    background-color: var(--background-color-view-only-textarea);
    border: var(--input-border-width) solid var(--border-color-textarea);
    border-radius: 4px;
}

.modal-textarea:disabled {
    background-color: var(--background-color-readonly-modal-input);
    opacity: var(--opacity-readonly-modal-input);
}

@media (width < $lg_min) {
    .settings-email-column {
        display: none;
    }

    .empty-email-col-for-user-group {
        display: none;
    }

    .hidden-subscriber-email {
        display: none;
    }

    .upload-size {
        display: none;
    }

    .user-avatar-section,
    .realm-icon-section {
        display: block;
    }
}
/* ... */

